tests/ui/asm/const-error.stderr
error[E0080]: evaluation of `test::<T>::{constant#0}` failed
  --> $DIR/const-error.rs:11:37
   |
LL |     unsafe { asm!("/* {} */", const 1 / 0); }
   |                                     ^^^^^ attempt to divide `1_i32` by zero

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
